<?xml version="1.0"?>
<package format="2">
<name>semantic_SLAM</name>
<version>2.0.0</version>
<description>
This package is a general semantic-SLAM library
</description>
<author email="hriday.bavle@upm.es">Hriday Bavle</author>
<author email="andres.solares.jurado@alumnos.upm.es">Andrés Solares</author>
<author email="german.difonzo.caturegli@alumnos.upm.es">Germán Di Fonzo</author>
<maintainer email="hriday.bavle@upm.es">Hriday Bavle</maintainer>
<maintainer email="andres.solares.jurado@alumnos.upm.es">Andrés Solares</maintainer>
<license>BSD</license>
<url>TODO</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>

</package>


